DO-3077 - publish packages dotnet restore typo

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: dotnet restore
         run: |
-          nuget restore src/dsc -f
+          dotnet restore src/dsc -f
 
       - name: dotnet publish
         run: |
