--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -18,8 +18,8 @@ jobs:
         platform:
           - linux-x64
           - linux-arm64
-          - windows-x64
-          - windows-arm64
+          - win-x64
+          - win-arm64
           - osx-x64
           - osx-arm64
       fail-fast: false # windows not working
