--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -45,9 +45,9 @@ jobs:
         run: |
           dotnet publish src/dsc/dsc.csproj -r ${{ matrix.platform }} -c Release --no-restore --self-contained true --verbosity normal
 
-      - name: dotnet publish src\EndpointManagerLauncher\endpointmanagerlauncher.csproj
+      - name: dotnet publish src/EndpointManagerLauncher/endpointmanagerlauncher.csproj
         if: ${{ matrix.platform == 'win-x64' || matrix.platform == 'win-arm64'}}
-        run: dotnet publish src\EndpointManagerLauncher\endpointmanagerlauncher.csproj -r ${{ matrix.platform }} -c Release --no-restore
+        run: dotnet publish src/EndpointManagerLauncher/endpointmanagerlauncher.csproj -r ${{ matrix.platform }} -c Release --no-restore
 
       - name: Run unit test cases
         run: | 
