--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -78,6 +78,8 @@ jobs:
     if: ${{ github.ref_type == 'tag' }}
     runs-on: ubuntu-22.04
     timeout-minutes: 15
+    permissions:
+      contents: write # needed to upload release assets
     needs:
       - build_packages
     steps:
