--- a/src/devhostagent.restorationjob/Dockerfile
+++ b/src/devhostagent.restorationjob/Dockerfile
@@ -18,7 +18,7 @@ ENV MINDARO_BUILD_NUMBER=${MindaroBuildNumber}
 RUN dotnet publish -c ${Configuration} -a ${TARGETARCH} --self-contained false --no-restore -o /output devhostAgent.restorationjob.csproj
 
 # Final container
-FROM mcr.microsoft.com/dotnet/sdk:8.0-cbl-mariner2.0 as final
+FROM mcr.microsoft.com/dotnet/sdk:8.0-cbl-mariner2.0 AS final
 
 # Setup common tools
 RUN tdnf clean all && \
