--- a/.github/workflows/package-docker.yml
+++ b/.github/workflows/package-docker.yml
@@ -12,6 +12,7 @@ jobs:
   package_docker:
     runs-on: ubuntu-22.04
     timeout-minutes: 30
+    concurrency: b2k-${{ matrix.imageName }}
     strategy:
       matrix:
         include: 
