--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,6 @@ jobs:
             github.rest.actions.createWorkflowDispatch({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              workflow_id: 'test.yml',
+              workflow_id: 'ci.yml',
               ref: "refs/tags/${{ steps.create_id.outputs.TAG }}",
             })
