--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -40,6 +40,7 @@ jobs:
           TAG: ${{ github.ref_name }}
         run: |
           envsubst < imagetag.setting.template > imagetag.setting
+          cat imagetag.setting
 
       - name: nuget restore
         run: |
