--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: true
     env:
       RELEASE_FILENAME: ${{ matrix.platform }}.zip
-      BUILD_TAG: ${{ github.ref_type == 'tag' && github.ref_name || '' }} # non-numerical will break this - expects format 2.0.20250103.0130
+      BUILD_TAG: ${{ github.ref_type == 'tag' && github.ref_name || null }} # non-numerical will break this - expects format 2.0.20250103.0130
     steps:
       - name: setup dotnet
         uses: actions/setup-dotnet@v4
