DO-3077 - nuget-version

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: setup NuGet
         uses: nuget/setup-nuget@v2
+        with:
+          nuget-version: '2.x'
 
       - name: checkout source code
         uses: actions/checkout@v4
