--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: true
     env:
       RELEASE_FILENAME: ${{ matrix.platform }}.zip
-      BUILD_TAG: ${{ github.ref_type == 'tag' && github.ref_name || null }} # non-numerical will break this - expects format 2.0.20250103.0130
+      REF_NAME: ${{ github.ref_type == 'tag' && github.ref_name || null }} # non-numerical will break this - expects format 2.0.20250103.0130
     steps:
       - name: setup dotnet
         uses: actions/setup-dotnet@v4
@@ -47,6 +47,9 @@ jobs:
 
       - name: nuget restore
         run: |
+          if [ ! -z "${{ env.REF_NAME }}" ]; then
+            BUILD_TAG="${{ env.REF_NAME }}"
+          fi
           nuget restore src/client.sln -Verbosity Normal -NonInteractive -ConfigFile src/nuget.config
 
       - name: dotnet publish src/dsc/dsc.csproj
@@ -56,6 +59,9 @@ jobs:
       - name: dotnet publish src/EndpointManagerLauncher/endpointmanagerlauncher.csproj
         if: ${{ matrix.platform == 'win-x64' || matrix.platform == 'win-arm64'}}
         run: |
+          if [ ! -z "${{ env.REF_NAME }}" ]; then
+            BUILD_TAG="${{ env.REF_NAME }}"
+          fi
           dotnet publish src/EndpointManagerLauncher/endpointmanagerlauncher.csproj -r ${{ matrix.platform }} -c Release --no-restore
 
       - name: endpointmanagerlauncher for windows
