--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,12 @@ jobs:
     env:
       SHA: ${{ github.sha }}
       TAG_MAJOR: '2'
-      TAG_MINOR: '0'
     steps:
       - id: create_id
         run: |
-          export TAG_PATCH_BUILD=$(TZ="UTC" date +"%Y%m%d.%H%M")
-          echo "TAG=${TAG_MAJOR}.${TAG_MINOR}.${TAG_PATCH_BUILD}" >> ${GITHUB_OUTPUT}
+          # i.e. 2.2025.0103.0130
+          export TAG_MINOR_PATCH_BUILD=$(TZ="UTC" date +"%Y.%m%d.%H%M")
+          echo "TAG=${TAG_MAJOR}.${TAG_MINOR_PATCH_BUILD}" >> ${GITHUB_OUTPUT}
 
       - name: create tag ${{ steps.create_id.outputs.TAG }} from sha ${{ env.SHA }}
         uses: actions/github-script@v7
